[adding] adding ui changes integrate the apis
