# backend-api/app/controllers/api/v1/registrations_controller.rb
@@ -6,12 +6,15 @@ module Api
       def create
         role_name = params[:role].to_s.downcase || "user"
         user = User.new(registration_params)
-       if user.save
+
+        if user.save
           token = JsonWebToken.encode(user_id: user.id)
           render json: {
+            success: true,
             token: token,
             email: user.email_address,
             role: role_name,
+            message: "User registered successfully"
           }, status: :created
         else
           render json: { errors: user.errors.full_messages }, status: :unprocessable_entity
@@ -21,7 +24,7 @@ module Api
       private
 
       def registration_params
-        params.require(:user).permit(:email_address, :password, :password_confirmation, :org_id)
+        params.require(:user).permit(:email_address, :password, :password_confirmation, :org_id,:role)
       end
     end
   end
