# backend-api/app/models/category.rb
@@ -1,0 +1,3 @@
+class Category < ApplicationRecord
+  belongs_to :organization, foreign_key: :org_id, dependent: :destroy
+end
