# backend-api/app/models/product.rb
@@ -1,0 +1,4 @@
+class Product < ApplicationRecord
+  belongs_to :org
+  belongs_to :category
+end
