# backend-api/app/serializer/user_role_blueprint.rb
@@ -1,0 +1,9 @@
+class UserRoleBlueprint < Blueprinter::Base
+  identifier :id
+
+  field :created_at, datetime_format: "%Y-%m-%dT%H:%M:%S%z"
+  field :updated_at, datetime_format: "%Y-%m-%dT%H:%M:%S%z"
+  view :extended do
+    association :user, blueprint: UserBlueprint
+  end
+end
